--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
     <groupId>junit5-allure-report</groupId>
     <artifactId>Maven_Java_Selenium</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>11</java.version>
