--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           java-version: 11.0.11
 
+      - name: Invoke a lifecycle phase
+        run: mvn install
+
       - name: Build Maven project
         run: mvn -b package --file pom.xml
 
