yml file config#3

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Invoke a lifecycle phase
         run: mvn install
 
+      - name: Compile
+        run: mvn compiler:compile
+
       - name: Build Maven project
         run: mvn -b package --file pom.xml
 
