project configuration for headless github action#1

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,10 @@ jobs:
           chmod +x ./scripts/InstallChrome.sh
             ./scripts/InstallChrome.sh
 
-      - name: Invoke a lifecycle phase
-        run: mvn install
+      - name: Finding Image.png
+        run: realpath image.png
+
+
+      #- name: Invoke a lifecycle phase
+        #run: mvn install
 
